prometheus-operator/operator/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-operator
spec:
  template:
    spec:
      serviceAccountName: prometheus-operator
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
      containers:
        - name: prometheus-operator
          image: quay.io/prometheus-operator/prometheus-operator:v0.88.1
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          args:
            - --kubelet-service=kube-system/kubelet
            - --prometheus-config-reloader=quay.io/prometheus-operator/prometheus-config-reloader:v0.88.1
            - --watch-referenced-objects-in-all-namespaces=true
            - --disable-unmanaged-prometheus-configuration=true
            - --kubelet-endpoints=true
            - --kubelet-endpointslice=false
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              memory: 200Mi
