prometheus-operator/operator/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-operator
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8080
      targetPort: http
