prometheus-operator/operator/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-operator
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus-operator
      app.kubernetes.io/component: controller
  ingress:
    - ports:
        - port: 8080
  egress: []
  policyTypes:
    - Ingress
    - Egress
